<resources>
    <string name="app_name">PROG7313_POE_PERSONALBUDGETAPP</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="title_activity_create_savings_goal">CreateSavingsGoal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_budget">Select Budget</string>
    <string name="select_category">Select Category</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string-array name="payment_methods">
        <item>Cash</item>
        <item>Card</item>
        <item>EFT</item>
        <item>Other</item>
    </string-array>

    <string name="label_principal">Principal (P):</string>
    <string name="hint_principal">Enter principal amount</string>
    <string name="label_annual_rate">Annual Rate (%) (R):</string>
    <string name="hint_annual_rate">Enter annual interest rate</string>
    <string name="label_time">Time (Years) (T):</string>
    <string name="hint_time">Enter time period in years</string>
    <string name="label_frequency">Compounding Frequency (per year):</string>
    <string name="hint_frequency">E.g. 1 for yearly, 12 for monthly</string>
    <string name="button_simple_interest">Simple Interest</string>
    <string name="button_compound_interest">Compound Interest</string>
    <string name="button_calculate">Calculate Interest</string>
    <string name="button_reset">Reset</string>
    <string name="label_interest">Interest:</string>


</resources>